Fix mat-card overflow

--- a/src/themes/_material/_mat-card.scss
+++ b/src/themes/_material/_mat-card.scss
@@ -23,6 +23,10 @@
 
   $config: theming.get-typography-config($theme);
 
+  .mat-card {
+    overflow: hidden;
+  }
+
   .mat-card > .mat-card-title {
     margin-bottom: 24px;
   }
